--- a/styles1.css
+++ b/styles1.css
@@ -46,7 +46,7 @@ h1 {
   background-color: white;
   color: #4e54c8;
   border: none;
-  padding: 15px 25px;
+  padding: 15px 25px;  /* Ajusta el padding del botón */
   font-size: 1rem;
   font-weight: bold;
   border-radius: 8px;
