--- a/styles1.css
+++ b/styles1.css
@@ -37,6 +37,11 @@ h1 {
   margin-bottom: 40px;
   line-height: 1.3;
 }
+h2 {
+  font-size: 2.2rem;
+  margin-bottom: 0;
+  line-height: 1.3;
+}
 
 #loginBtn {
   display: flex;
