--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,8 @@
       margin: 0;
       padding: 0;
     }
-    header1 {
+    header {
       background: #4e54c8;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-   header2 {
-      background: #8f94fb;
       color: white;
       padding: 1rem;
       text-align: center;
