--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,32 @@
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f5f5f5;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: #4e54c8;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-    }
-    #calendar {
-      max-width: 1000px;
-      margin: 40px auto;
-      background: white;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
-    }
+body {
+    font-family: 'Segoe UI', sans-serif;
+    background: #f5f5f5;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    padding: 0;
+}
+header {
+    background: #4e54c8;
+    color: white;
+    padding: 1rem;
+    text-align: center;
+}
+footer {
+    background-color: #f5f5f5;
+    text-align: center;
+    padding: 1rem;
+    font-size: 0.9rem;
+    border-top: 1px solid #ccc;
+}
+#calendar {
+    max-width: 1000px;
+    margin: 40px auto;
+    background: white;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+}
 #logoutBtn{
     margin-top: 10px; 
     background: white; 
@@ -26,4 +35,29 @@
     border: none; 
     border-radius: 8px; 
     cursor: pointer;
+}
+#logoutBtn:hover {
+    background-color: #c9302c;
+}
+#userFolderLink {
+    margin-top: 0.5rem;
+}
+#logoutContainer {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+ .footer-logo {
+  height: 40px;
+  margin-bottom: 0.5rem;
+}
+
+.social-icons a {
+  margin: 0 10px;
+  color: #555;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+.social-icons a:hover {
+  color: #0073e6;
 }
