--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
     display: flex;
     padding: 0;
+    flex-direction: column;
 }
 header {
     background: #4e54c8;
@@ -13,11 +14,12 @@ header {
     text-align: center;
 }
 footer {
-    background-color: #f5f5f5;
+    background-color: #003366;
     text-align: center;
     padding: 1rem;
     font-size: 0.9rem;
     border-top: 1px solid #ccc;
+    margin-top: auto;
 }
 #calendar {
     max-width: 1000px;
@@ -48,7 +50,7 @@ footer {
 }
  .footer-logo {
   height: 40px;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .social-icons a {
