--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ footer {
 }
 #logoutBtn{
     margin-top: 10px; 
-    background: white; 
+    background: black; 
     color: #4e54c8; 
     padding: 8px 16px; 
     border: none; 
