--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ footer {
     margin-top: auto;
 }
 #calendar {
-    max-width: 1000px;
+    max-width: 80%;
     margin: 40px auto;
     background: white;
     padding: 20px;
