--- a/css/styles.css
+++ b/css/styles.css
@@ -43,21 +43,25 @@ footer {
     margin-top: 0.5rem;
 }
 #logoutContainer {
-  text-align: center;
-  margin-bottom: 1rem;
+    text-align: center;
+    margin-bottom: 1rem;
 }
- .footer-logo {
-  height: 40px;
-  margin-bottom: 1rem;
+.footer-logo {
+    height: 40px;
+    margin-bottom: 1rem;
+    object-fit: contain;
 }
 
 .social-icons a {
-  margin: 0 10px;
-  color: #555;
-  text-decoration: none;
-  font-size: 1.2rem;
+    margin: 0 15px;  /* Espaciado entre los íconos */
+    display: inline-block;
+    text-decoration: none;
+    border-radius: 50%;  /* Bordes redondeados */
+    background-color: #f5f5f5;  /* Fondo claro */
+    padding: 10px;   /* Espaciado dentro del ícono */
+    transition: background-color 0.3s ease; /* Efecto al pasar el ratón */
 }
 
 .social-icons a:hover {
-  color: #0073e6;
+    color: #4285f4;
 }
