--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ footer {
 }
 #logoutBtn{
     margin-top: 10px; 
-    background: black; 
+    background: #cd1267; 
     color: #4e54c8; 
     padding: 8px 16px; 
     border: none; 
