--- a/css/styles.css
+++ b/css/styles.css
@@ -51,17 +51,12 @@ footer {
     margin-bottom: 1rem;
     object-fit: contain;
 }
-
 .social-icons a {
-    margin: 0 15px;  /* Espaciado entre los íconos */
-    display: inline-block;
+    margin: 0 10px;
+    color: #555;
     text-decoration: none;
-    border-radius: 50%;  /* Bordes redondeados */
-    background-color: #f5f5f5;  /* Fondo claro */
-    padding: 10px;   /* Espaciado dentro del ícono */
-    transition: background-color 0.3s ease; /* Efecto al pasar el ratón */
+    font-size: 1.2rem;
 }
-
 .social-icons a:hover {
     color: #4285f4;
 }
