--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', sans-serif;
-    background: #f5f5f5;
+    background: #d1d1d1;
     margin: 0;
     padding: 0;
     padding: 0;
@@ -22,7 +22,7 @@ footer {
 #calendar {
     max-width: 80%;
     margin: 40px auto;
-    background: grey;
+    background: white;
     padding: 20px;
     border-radius: 12px;
     box-shadow: 0 4px 16px rgba(0,0,0,0.1);
