--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,11 @@ footer {
     border-top: 1px solid #ccc;
     margin-top: auto;
 }
+#logo-header {
+    height: 80px;
+    margin-bottom: 1rem;
+    object-fit: contain;
+}
 #calendar {
     max-width: 80%;
     margin: 40px auto;
