--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', sans-serif;
-    background: #555555;
+    background: linear-gradient(to right, #1c4378, #0eddba, #af0e79);
     margin: 0;
     padding: 0;
     padding: 0;
