--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', sans-serif;
-    background: #909090;
+    background: #b7b7b7;
     margin: 0;
     padding: 0;
     padding: 0;
