--- a/css/styles.css
+++ b/css/styles.css
@@ -86,3 +86,23 @@ footer div {
   flex-direction: column;
   justify-content: center;
 }
+.fc-event-title, .fc-event-time {
+    white-space: normal !important;
+}
+.custom-event {
+    font-size: 12px;
+    line-height: 1.3;
+    padding: 2px;
+    height: auto !important;
+    overflow: visible !important;
+    white-space: normal !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.fc-timegrid-event-harness {
+    height: auto !important;
+}
+.fc-timegrid-event {
+    height: auto !important;
+}
